2008-06-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Klaus Leidinger <klaus@mikrocontroller-projekte.de>:
	Add check for buffermode feature, and use it if present.  Can be
	turned off using -x no_blockmode.
	* avr910.c: Implement buffermode test and usage.
	* avrdude.1: Document -x no_blockmode.
	* doc/avrdude.texi: (Ditto.)

2008-03-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usb_libusb.c: #undef interface for Win32

2008-03-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avr910.c: Add support for the -x devcode option.
	* avrdude.1: Document -x devcode for avr910.
	* doc/avrdude.texi: (Ditto.)

2008-03-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add initial support for the Atmel STK600, for
	"classic" AVRs (AT90, ATtiny, ATmega) in both,
	ISP and high-voltage programming modes.
	* Makefile.am: Add -lm.
	* avrdude.conf.in: Add stk600, stk600pp, and stk600hvsp.
	* config_gram.y: Add support for the stk600* keywords.
	* lexer.l: (Ditto.)
	* pgm.h: Add the "chan" parameter to set_varef().
	* stk500.c: (Ditto.)
	* serial.h: Add USB endpoint support to struct filedescriptor.
	* stk500v2.c: Implement the meat of the STK600 support.
	* stk500v2.h: Add new prototypes for stk600*() programmers.
	* stk500v2_private.h: Add new constants used in the STK600.
	* term.c: Add AREF channel support.
	* usb_libusb.c: Automatically determine the correct write
	endpoint ID, the STK600 uses 0x83 while all other tools use
	0x82.  Propagate the EP to use through struct filedescriptor.
	* usbdevs.h: Add the STK600 USB product ID.
	* tools/get-stk600-cards.xsl: XSL transformation for
	targetboards.xml to obtain the list of socket and routing
	card IDs, to be used in stk500v2.c (for displaying the
	names).
	* tools/get-stk600-devices.xsl: XSL transformation for
	targetboards.xml to obtain the table of socket/routing cards
	and their respective AVR device support for doc/avrdude.texi.
	* avrdude.1: Document all the STK600 stuff.